--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: '$(AllureReportDirectory)'
+    pathtoPublish: '$(Build.SourcesDirectory)/allure-results/'
     artifactName: 'AllureReport'
